# satellite-tracker

./: README.md
engine/: .gitignore  Cargo.toml  dockerfile  index.html
engine/cargo/: config.toml
engine/crates/ingestion/: Cargo.toml
engine/crates/ingestion/src/: analysis.rs  bands.rs  difference_map.rs  lib.rs  models.rs  ndvi.rs  stac.rs
engine/crates/ingestion/tests/: mock_pass.rs  real_sceen.rs
engine/crates/orchestrator/: Cargo.toml
engine/crates/orchestrator/src/: lib.rs  main.rs
engine/crates/orchestrator/tests/: orchestrator.rs
engine/crates/predictor/: Cargo.toml
engine/crates/predictor/src/: api.rs  coords.rs  error.rs  lib.rs  propagate.rs  types.rs
engine/crates/predictor/src/types/: mod.rs  satellite_pass_event.rs
engine/crates/predictor/tests/: propagation.rs
engine/crates/satellite_predictor/: Cargo.toml
engine/crates/satellite_predictor/src/: lib.rs
engine/crates/satellite_predictor/src/types/: mod.rs  passes.rs  position.rs  wasm.rs
engine/crates/sentinel_azure/: Cargo.toml
engine/crates/sentinel_cog/: Cargo.toml  README.md
engine/crates/sentinel_cog/src/: decode.rs  error.rs  fetch.rs  geo.rs  lib.rs  parse.rs
engine/crates/sentinel_cog/tests/: overview.rs  parse.rs
engine/crates/sentinel_db/: Cargo.toml
engine/crates/sentinel_db/src/: connection.rs  insert.rs  lib.rs  listener.rs  observe.rs  polygon.rs
engine/crates/sentinel_db/tests/: db_tests  insert_tests.rs
engine/crates/sentinel_ndvi/: Cargo.toml  README.md
engine/crates/sentinel_ndvi/src/: analysis.rs  error.rs  geotiff.rs  lib.rs  ndvi.rs
engine/crates/sentinel_ndvi/tests/: ndvi.rs  ndvi_stats_test.rs
engine/crates/sentinel_orchestrator/: Cargo.toml
engine/crates/sentinel_orchestrator/src/: config.rs  error.rs  lib.rs  main.rs  predict.rs  run.rs  runner.rs  tle.rs
engine/crates/sentinel_orchestrator/tests/: orchestrator.rs  run_test.rs  tle_tests.rs
engine/crates/sentinel_pipeline/: Cargo.toml
engine/crates/sentinel_pipeline/src/: error.rs  lib.rs  pass.rs  stac.rs
engine/crates/sentinel_pipeline/tests/: ingestion.rs  real_scene.rs
engine/crates/sentinel_runner/: Cargo.toml
engine/crates/sentinel_runner/src/: main.rs
engine/crates/sentinel_types/: Cargo.toml  README.md
engine/crates/sentinel_types/src/: bbox.rs  event.rs  lib.rs  ndvi_record.rs  pipeline_result.rs
engine/src/: error.rs  lib.rs  satellite_position.rs  types.rs
