[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "crates/satellite_predictor",
    "crates/sentinel_cog",
    "crates/sentinel_ndvi",
    "crates/sentinel_orchestrator",
    "crates/sentinel_pipeline",
    "crates/sentinel_runner",
    "crates/sentinel_types",
]

resolver = "2"
