[package]
name = "ingestion"
version = "0.1.0"
edition = "2024"

[dependencies]
predictor = {path = "../predictor"}
serde = "1.0"
reqwest = {version = "0.12.0", features = ["blocking", "json"]}
tokio = {version = "1.52.1", features = ["full"]}
chrono = "0.4.44"
tiff = "0.11.3"
anyhow = "1"
bytes = "1"
serde_json = "1"
