[package]
name = "predictor"
version = "0.1.0"
edition = "2024"

[dependencies]
wasm-bindgen = { version = "0.2.118", optional = true }
sgp4 = "2.4.0"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }

[features]
wasm = [
    "wasm-bindgen",
    "serde-wasm-bindgen",
    "console_error_panic_hook"
]
