[package]
name = "predictor"
version = "0.1.0"
edition = "2024"

[dependencies]
sgp4    = "2.3"
serde   = { version = "1", features = ["derive"] }
chrono  = "0.4"

[dependencies.wasm-bindgen]
version  = "0.2.118"
optional = true

[dependencies.serde-wasm-bindgen]
version  = "0.6"
optional = true

[dependencies.console_error_panic_hook]
version  = "0.1"
optional = true

[features]
wasm = ["wasm-bindgen", "serde-wasm-bindgen", "console_error_panic_hook"]

