[package]
name = "sentinel_runner"
version = "0.1.0"
edition = "2024"
 
[[bin]]
name = "sentinel_runner"
path = "src/main.rs"
 
[dependencies]
sentinel_pipeline = { path = "../sentinel_pipeline" }
sentinel_db = { path = "../sentinel_db" }
sentinel_types = { path = "../sentinel_types" }

env_logger = "0.11"
log = "0.4"
dotenvy = "0.15.7"
 