[package]
name = "sentinel_orchestrator"
version = "0.1.0"
edition = "2024"
description = "Predicts Sentinel-2 passes and emits events for downstream ingestion"
license = "MIT"
 
[dependencies]
satellite_predictor = { path = "../satellite_predictor" }
sentinel_types = { path = "../sentinel_types" }
reqwest = { version = "0.12", features = ["blocking"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
log = "0.4"
 