[package]
name = "sentinel_runner"
version = "0.1.0"
edition = "2024"
 
[[bin]]
name = "sentinel_runner"
path = "src/main.rs"
 
[dependencies]
sentinel_orchestrator = { path = "../sentinel_orchestrator" }
sentinel_pipeline = { path = "../sentinel_pipeline" }
satellite_predictor = { path = "../satellite_predictor" }
sentinel_types = { path = "../sentinel_types" }
env_logger = "0.11"
log = "0.4"
 